add header add links

--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -1,24 +1,30 @@
-<nz-table #nzTable [nzData]="users$ | async">
-  <thead>
-  <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Age</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let user of nzTable.data">
-    <td>{{user.name.first}}</td>
-    <td>{{user.name.last}}</td>
-    <td>{{user.age}}</td>
-    <td>
-      <a [routerLink]="user.guid">Edit</a>
-      <nz-divider nzType="vertical"></nz-divider>
-      <button nz-button nzType="link" nzDanger
-              (click)="onDelete(user.guid)">Delete
-      </button>
-    </td>
-  </tr>
-  </tbody>
-</nz-table>
+<div nz-row>
+  <div nz-col nzSpan="1"></div>
+  <div nz-col nzSpan="10">
+    <nz-table #nzTable [nzData]="users$ | async">
+      <thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Age</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let user of nzTable.data">
+        <td>{{user.name.first}}</td>
+        <td>{{user.name.last}}</td>
+        <td>{{user.age}}</td>
+        <td>
+          <a [routerLink]="user.guid">Edit</a>
+          <nz-divider nzType="vertical"></nz-divider>
+          <button nz-button nzType="link" nzDanger
+                  (click)="onDelete(user.guid)">Delete
+          </button>
+        </td>
+      </tr>
+      </tbody>
+    </nz-table>
+  </div>
+  <div nz-col nzSpan="1"></div>
+</div>
