--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<nz-layout>
+  <nz-header>
+    <ul nz-menu nzTheme="dark" nzMode="horizontal">
+      <li nz-menu-item>
+        <a [routerLink]="'/'">User List</a>
+      </li>
+      <nz-divider nzType="vertical"></nz-divider>
+      <li nz-menu-item>
+        <a [routerLink]="'/add'">Add User</a>
+      </li>
+    </ul>
+  </nz-header>
+  <nz-content>
+    <router-outlet></router-outlet>
+  </nz-content>
+</nz-layout>
