add user detail page url parsing method add get user by guid method

--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -4,12 +4,8 @@
     <nz-table #nzTable [nzData]="users$ | async">
       <thead>
       <tr>
-<!--        <th *ngFor="let col of cols"-->
-<!--            [nzSortOrder]="sortOrder"-->
-<!--            [nzSortFn]="sortFn"-->
-<!--            [nzSortDirections]="sortDirections">{{col}}</th>-->
-
-        <th *ngFor="let column of cols" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">{{ column.title }}</th>
+        <th *ngFor="let column of cols" [nzSortFn]="column.compare"
+            [nzSortPriority]="column.priority">{{ column.title }}</th>
       </tr>
       </thead>
       <tbody>
